--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -61,8 +61,8 @@ const atomFeed = '/atom.xml'
 <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.min.js'></script> -->
 
 <!-- <script src='https://jswhisperer.uk/js/responsiveslides.min.js'></script> -->
-<link rel='authorization_endpoint' href='https://indieauth.com/auth' />
-<link rel='token_endpoint' href='https://tokens.indieauth.com/token' />
+<!-- <link rel='authorization_endpoint' href='https://indieauth.com/auth' />
+<link rel='token_endpoint' href='https://tokens.indieauth.com/token' /> -->
 
 <!-- Primary Meta Tags -->
 <title>{siteTitle}</title>
