--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -92,114 +92,116 @@ const articleDate = pubDate.toISOString()
 
 					<div class='text-center text-sm text-opacity-50'>
 						Published <FormattedDate date={pubDate} />
-					</div> by <a class='p-author u-url u-uid' rel='author' href={currentAuthor?.data.url}>
-						Published by
-						{currentAuthor?.slug}</a
-					>
-					{
-						[
-							`https://github.com/${username}`,
-							`https://www.linkedin.com/in/${username}`,
-							`https://bsky.app/profile/${username}.bsky.social`,
-							`https://www.linkedin.com/in/${username}`,
-							`https://dev.to/${username}`,
-							`mailto:hello@${username}`,
-							`https://x.com/${username}`
-						].map((social) => <a rel='me' href={social} class='u-url' style='display:none;' />)
-					}
-					<Picture
-						width={100}
-						formats={['avif', 'webp']}
-						class='u-photo'
-						src={import('../assets/images/greg.jpeg')}
-						alt='Gregory Benner'
-						style='display:none;'
-					/>
-					<p class='text-center text-sm text-opacity-50 font-bold'>
-						- {readTime}
-					</p>
-					<!-- </a> -->
+						<div class='author u-author h-card'>
+							by <a class='u-url u-uid' rel='author' href={currentAuthor?.data.url}>
+								Published by
+								<span class='name p-name'>{currentAuthor?.slug}</span></a
+							>
+							{
+								[
+									`https://github.com/${username}`,
+									`https://www.linkedin.com/in/${username}`,
+									`https://bsky.app/profile/${username}.bsky.social`,
+									`https://www.linkedin.com/in/${username}`,
+									`https://dev.to/${username}`,
+									`mailto:hello@${username}`,
+									`https://x.com/${username}`
+								].map((social) => <a rel='me' href={social} class='u-url' style='display:none;' />)
+							}
+							<Picture
+								width={100}
+								formats={['avif', 'webp']}
+								class='u-photo'
+								src={import('../assets/images/greg.jpeg')}
+								alt='Gregory Benner'
+								style='display:none;'
+							/>
+							<p class='text-center text-sm text-opacity-50 font-bold'>
+								- {readTime}
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class='flex flex-wrap justify-center items-center gap-2 gap-y-4 md:gap-5'>
+					{tags?.map((tag) => <Tag tag={tag} />)}
 				</div>
 			</div>
 
-			<div class='flex flex-wrap justify-center items-center gap-2 gap-y-4 md:gap-5'>
-				{tags?.map((tag) => <Tag tag={tag} />)}
-			</div>
-		</header>
-
-		<>
-			{
-				heroImage && (
-					<Picture
-						src={heroImage}
-						class='rounded-md w-full max-h-[300px] border-4 md:border-t-4  md:max-h-[500px] my-8 object-cover border-white-900'
-						alt={`img of ${title}`}
-						decoding='async'
-						loading='eager'
-						formats={['avif', 'webp']}
-					/>
-				)
-			}
-		</>
-
-		<hr />
-
-		<div>
-			<slot />
-		</div>
-	</article>
-</BaseLayout>
-
-<script>
-	const fnObserver = () => {
-		function handleIntersection(
-			entries: IntersectionObserverEntry[],
-			observer: IntersectionObserver
-		) {
-			entries?.forEach((entry) => {
-				if (!entry?.isIntersecting) return
-				const index = document.querySelector(`aside a[href="#${entry.target.id}"]`)
-
-				if (entry.isIntersecting) {
-					index?.classList.remove('bg-slate-200', 'dark:bg-slate-800') // remove bg
-					index?.classList.add(
-						'bg-indigo-600',
-						'dark:bg-indigo-700',
-						'text-white',
-						'font-bold',
-						'transition-colors',
-						'duration-200'
-					)
-				} else {
-					index?.classList.add('bg-slate-200', 'dark:bg-slate-800') // add bg
-					index?.classList.remove(
-						'bg-indigo-600',
-						'dark:bg-indigo-700',
-						'text-white',
-						'font-bold',
-						'transition-colors',
-						'duration-200'
+			<>
+				{
+					heroImage && (
+						<Picture
+							src={heroImage}
+							class='rounded-md w-full max-h-[300px] border-4 md:border-t-4  md:max-h-[500px] my-8 object-cover border-white-900'
+							alt={`img of ${title}`}
+							decoding='async'
+							loading='eager'
+							formats={['avif', 'webp']}
+						/>
 					)
 				}
+			</>
+
+			<hr />
+
+			<div>
+				<slot />
+			</div>
+		</header>
+	</article>
+
+	<script>
+		const fnObserver = () => {
+			function handleIntersection(
+				entries: IntersectionObserverEntry[],
+				observer: IntersectionObserver
+			) {
+				entries?.forEach((entry) => {
+					if (!entry?.isIntersecting) return
+					const index = document.querySelector(`aside a[href="#${entry.target.id}"]`)
+
+					if (entry.isIntersecting) {
+						index?.classList.remove('bg-slate-200', 'dark:bg-slate-800') // remove bg
+						index?.classList.add(
+							'bg-indigo-600',
+							'dark:bg-indigo-700',
+							'text-white',
+							'font-bold',
+							'transition-colors',
+							'duration-200'
+						)
+					} else {
+						index?.classList.add('bg-slate-200', 'dark:bg-slate-800') // add bg
+						index?.classList.remove(
+							'bg-indigo-600',
+							'dark:bg-indigo-700',
+							'text-white',
+							'font-bold',
+							'transition-colors',
+							'duration-200'
+						)
+					}
+				})
+			}
+
+			const headings = document.querySelectorAll(
+				'div.prose h1, div.prose h2, div.prose h3, div.prose h4, div.prose h5, div.prose h6'
+			)
+
+			const options = {
+				root: null,
+				rootMargin: ' 15% 0px 0% 0px ',
+				threshold: 1
+			}
+
+			const observer = new IntersectionObserver(handleIntersection, options)
+
+			headings.forEach((heading) => {
+				observer.observe(heading)
 			})
 		}
-
-		const headings = document.querySelectorAll(
-			'div.prose h1, div.prose h2, div.prose h3, div.prose h4, div.prose h5, div.prose h6'
-		)
-
-		const options = {
-			root: null,
-			rootMargin: ' 15% 0px 0% 0px ',
-			threshold: 1
-		}
-
-		const observer = new IntersectionObserver(handleIntersection, options)
-
-		headings.forEach((heading) => {
-			observer.observe(heading)
-		})
-	}
-	fnObserver()
-	document.addEventListener('astro:after-swap', fnObserver)
-</script>
+		fnObserver()
+		document.addEventListener('astro:after-swap', fnObserver)
+	</script>
+</BaseLayout>
