--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -71,7 +71,7 @@ const articleDate = pubDate.toISOString()
 >
 	<article
 		transition:animate={slide({ duration: '0.5s' })}
-		class='h-card post h-entry min-w-full md:py-4 sm:max-w-none md:max-w-none'
+		class='entry h-entry post h-entry min-w-full md:py-4 sm:max-w-none md:max-w-none'
 		role='article'
 		itemscope
 		itemtype='http://schema.org/BlogPosting'
@@ -93,10 +93,13 @@ const articleDate = pubDate.toISOString()
 					<div class='text-center text-sm text-opacity-50'>
 						Published <FormattedDate date={pubDate} />
 						<div class='author u-author h-card'>
-							by <a class='u-url u-uid' rel='author' href={currentAuthor?.data.url}>
-								Published by
-								<span class='name p-name'>{currentAuthor?.slug}</span></a
-							>
+							<div class='author-name'>
+								by
+								<a href='https://jswhisperer.uk/author/greg' class='name p-name'>Gregory Benner</a>
+								<a href='https://jswhisperer.uk/author/greg' class='url u-url'
+									>jswhisperer.uk/author/greg</a
+								>
+							</div>
 							{
 								[
 									`https://github.com/${username}`,
