--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -46,13 +46,17 @@ const showDate = (webmention: string) =>
 			<ul>
 				{webmentions.map((webmention: WebmentionProps) => (
 					<li class='flexx r' style='align-items: center;'>
+						<time aria-hidden='true' itemprop='datePublished' datetime={webmention['wm-received']}>
+							{showDate(webmention['wm-received'])}
+						</time>
 						<div
 							itemprop='author'
 							itemscope
 							itemtype='https://schema.org/Person'
 							class='avatar-and-author author u-author h-card'
 						>
-							<a href={webmention.author.url} rel='author' aria-label='author url'>
+							<div itemprop='name'>{webmention.author.name}</div>
+							<a itemprop='url' href={webmention.author.url} aria-label='author url'>
 								{webmention.author.photo ? (
 									<Picture
 										alt={webmention.author.name}
