--- a/src/components/TabletOfContentsHeading.astro
+++ b/src/components/TabletOfContentsHeading.astro
@@ -33,3 +33,13 @@ export interface Props {
 		)
 	}
 </li>
+<li class='flex flex-col'>
+	<a
+		href={'#webmentions'}
+		class={cn(
+			`bg-slate-200 dark:bg-slate-800 dark:hover:bg-indigo-400 hover:bg-indigo-300 hover:text-white  py-1 px-4 dark:text-white rounded-full mb-2 first-letter:uppercase w-fit line-clamp-2`
+		)}
+	>
+		Webmentions
+	</a>
+</li>
