--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -28,11 +28,22 @@
 	}
 }
 
+.post-overview-holder {
+  /* overflow: hidden; */
+  &:hover .glass {
+        opacity: 1;
+        height: 100%;
+}
+}
+
 .glass {
+  transition: all 0.3s ease-in-out;
+  opacity: .5;
 	background: rgba(57, 56, 56, 0.52);
 	backdrop-filter: blur(13px) saturate(150%);
 	-webkit-backdrop-filter: blur(13px) saturate(150%);
-	z-index: -1;
+  height: 65%;
+
 }
 
 .shadow {
