--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -2,7 +2,17 @@
 import ArrowLeft from './icons/ArrowLeft.astro'
 import ArrowRight from './icons/ArrowRight.astro'
 
-const { page } = Astro.props
+type PageProps = {
+	currentPage?: number
+	lastPage?: number
+	url?: {
+		prev: string
+		next: string
+	}
+	start: number
+}
+
+const page: any = Astro.props
 ---
 
 <div class='flex gap-5 md:gap-1 justify-around md:justify-end'>
@@ -10,7 +20,7 @@ const { page } = Astro.props
 	{
 		page.start > 0 && (
 			<a
-				href={page.url.prev}
+				href={page?.url?.prev}
 				class='flex items-center justify-center px-8 md:px-4 h-10 text-base font-medium text-black bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-transparent dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'
 			>
 				<ArrowLeft />
