--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -18,60 +18,65 @@ const {
 	transition:animate={slide({ duration: '0.5s' })}
 	class='h-entry grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'
 >
-	<a href={`/post/${slug}/`}>
-		{
-			heroImage && (
-				<Picture
-					layout='responsive'
-					src={heroImage}
-					formats={['avif', 'webp']}
-					class='h-full min-w-full object-cover hover:scale-[101%] transition-all duration-200 rounded-[2px]'
-					alt={`img of ${title}`}
-					decoding='async'
-					loading={index < 3 ? 'eager' : 'lazy'}
-				/>
-			)
-		}
+	<div class='post-overview-holder relative'>
+		<a href={`/post/${slug}/`}>
+			{
+				heroImage && (
+					<Picture
+						layout='responsive'
+						src={heroImage}
+						formats={['avif', 'webp']}
+						class='h-full min-w-full object-cover hover:scale-[101%] transition-all duration-200 rounded-[2px]'
+						alt={`img of ${title}`}
+						decoding='async'
+						loading={index < 3 ? 'eager' : 'lazy'}
+					/>
+				)
+			}
 
-		<div class='z-30 absolute bottom-0 w-full h-20'>
-			<div class='-z-10 absolute bottom-0 glass w-full min-h-full'></div>
-			<div class='flex items-center justify-between gap-x-1 text-white px-6 py-4'>
-				<div class='flex flex-col gap-1 items-center justify-center'>
-					<FormattedDate date={pubDate} />
-					<span class='text-sm'> {readTime}</span>
+			<div class='z-30 absolute bottom-0 w-full h-20'>
+				<div class='-z-10 absolute bottom-0 glass w-full'>
+					<div class='flex items-center justify-between gap-x-1 text-white px-6 py-4'>
+						<div class='flex flex-col gap-1 items-center justify-center'>
+							<FormattedDate date={pubDate} />
+							<span class='text-sm'> {readTime}</span>
+						</div>
+
+						<span class='pb-4'
+							><a href={'/category/' + category.toLowerCase() + '/1'}>#{category}</a></span
+						>
+					</div>
+				</div>
+			</div>
+		</a>
+
+		<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
+			<div class='flex flex-col gap-3'>
+				<div class='e-content p-name flex flex-col gap-2'>
+					<a class='u-url text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
+						{title}
+					</a>
 				</div>
 
-				<span class='pb-4'>{category}</span>
-			</div>
-		</div>
-	</a>
-
-	<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
-		<div class='flex flex-col gap-3'>
-			<div class='e-content p-name flex flex-col gap-2'>
-				<a class='u-url text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
-					{title}
-				</a>
+				<p
+					class='overflow-hidden line-clamp-3 text-gray-700 dark:text-white mb-5 font-[400] md:pr-[15%]'
+				>
+					{description}
+				</p>
 			</div>
 
-			<p
-				class='overflow-hidden line-clamp-3 text-gray-700 dark:text-white mb-5 font-[400] md:pr-[15%]'
-			>
-				{description}
-			</p>
+			<footer class='flex justify-between items-center'>
+				<LinkUnderline
+					link={`/post/${slug}/`}
+					class='mt-4 p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
+					aria-label={`go to ${title}`}
+				>
+					Read Post <span
+						class='mt-[1px] group-hover:rotate-45 transition-transform duration-250 ease-in-out'
+					></span>
+				</LinkUnderline>
+			</footer>
 		</div>
-
-		<footer class='flex justify-between items-center'>
-			<LinkUnderline
-				link={`/post/${slug}/`}
-				class='mt-4 p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
-				aria-label={`go to ${title}`}
-			>
-				Read Post <span
-					class='mt-[1px] group-hover:rotate-45 transition-transform duration-250 ease-in-out'
-				></span>
-			</LinkUnderline>
-		</footer>
 	</div>
 </article>
 
