--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -34,7 +34,7 @@ const {
 				)
 			}
 
-			<div class='z-30 absolute bottom-0 w-full h-20'>
+			<div class='z-30 absolute bottom-0 w-full sixy-five-percent'>
 				<div class='-z-10 absolute bottom-0 glass w-full'>
 					<div class='flex items-center justify-between gap-x-1 text-white px-6 py-4'>
 						<div class='flex flex-col gap-1 items-center justify-center'>
@@ -43,40 +43,45 @@ const {
 						</div>
 
 						<span class='pb-4'
-							><a href={'/category/' + category.toLowerCase() + '/1'}>#{category}</a></span
+							><LinkUnderline
+								strokewidth='2px'
+								underlinecolor='white'
+								href={'/category/' + category.toLowerCase() + '/1'}
+							>
+								#{category}
+							</LinkUnderline></span
 						>
 					</div>
 				</div>
 			</div>
 		</a>
-
-		<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
-			<div class='flex flex-col gap-3'>
-				<div class='e-content p-name flex flex-col gap-2'>
-					<a class='u-url text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
-						{title}
-					</a>
-				</div>
-
-				<p
-					class='overflow-hidden line-clamp-3 text-gray-700 dark:text-white mb-5 font-[400] md:pr-[15%]'
-				>
-					{description}
-				</p>
+	</div>
+	<div class='flex justify-between flex-col gap-4 md:gap-0 py-6 pl-1'>
+		<div class='flex flex-col gap-3'>
+			<div class='e-content p-name flex flex-col gap-2'>
+				<a class='u-url text-2xl font-semibold -tracking-wider' href={`/post/${slug}/`}>
+					{title}
+				</a>
 			</div>
 
-			<footer class='flex justify-between items-center'>
-				<LinkUnderline
-					link={`/post/${slug}/`}
-					class='mt-4 p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
-					aria-label={`go to ${title}`}
-				>
-					Read Post <span
-						class='mt-[1px] group-hover:rotate-45 transition-transform duration-250 ease-in-out'
-					></span>
-				</LinkUnderline>
-			</footer>
+			<p
+				class='overflow-hidden line-clamp-3 text-gray-700 dark:text-white mb-5 font-[400] md:pr-[15%]'
+			>
+				{description}
+			</p>
 		</div>
+
+		<footer class='flex justify-between items-end'>
+			<LinkUnderline
+				link={`/post/${slug}/`}
+				class='mt-4 p-4 flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
+				aria-label={`go to ${title}`}
+			>
+				Read Post <span
+					class='mt-[1px] group-hover:rotate-45 transition-transform duration-250 ease-in-out'
+				></span>
+			</LinkUnderline>
+		</footer>
 	</div>
 </article>
 
