--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -19,7 +19,7 @@ const {
 	class='h-entry grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group my-10'
 >
 	<div class='post-overview-holder relative'>
-		<a href={`/post/${slug}/`}>
+		<a href={`/post/${slug}/`} aria-label={'read more about' + title}>
 			{
 				heroImage && (
 					<Picture
