--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -50,11 +50,11 @@ const showDate = (webmention: string) =>
 						class='flexx r'
 						style='align-items: center;'
 					>
-						<small>
+						{/* <small>
 							<time itemprop='datePublished' datetime={webmention['wm-received']}>
 								{showDate(webmention['wm-received'])}
 							</time>
-						</small>
+						</small> */}
 						<div
 							itemprop='author'
 							itemscope
