--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -50,11 +50,11 @@ const showDate = (webmention: string) =>
 						class='flexx r'
 						style='align-items: center;'
 					>
-						{/* <small>
+						<small>
 							<time itemprop='datePublished' datetime={webmention['wm-received']}>
 								{showDate(webmention['wm-received'])}
 							</time>
-						</small> */}
+						</small>
 						<div
 							itemprop='author'
 							itemscope
@@ -94,11 +94,11 @@ const showDate = (webmention: string) =>
 							{webmention['wm-property'] === 'like-of' && (
 								<div class='flexx' itemprop='text'>
 									Liked on:
-									<small>
+									{/* <small>
 										<time itemprop='datePublished' datetime={webmention['wm-received']}>
 											{showDate(webmention['wm-received'])}
 										</time>
-									</small>
+									</small> */}
 								</div>
 							)}
 
@@ -106,11 +106,11 @@ const showDate = (webmention: string) =>
 								<div class='flexx r' style='align-items: center;'>
 									<p itemprop='text'>
 										replied on:
-										<small>
+										{/* <small>
 											<time itemprop='datePublished' datetime={webmention['wm-received']}>
 												{showDate(webmention['wm-received'])}
 											</time>
-										</small>
+										</small> */}
 									</p>
 									<blockquote
 										itemprop='text'
@@ -122,11 +122,11 @@ const showDate = (webmention: string) =>
 							{webmention['wm-property'] === 'repost-of' ? (
 								<p itemprop='text'>
 									Reposted on
-									<small>
+									{/* <small>
 										<time itemprop='datePublished' datetime={webmention['wm-received']}>
 											{showDate(webmention['wm-received'])}
 										</time>
-									</small>
+									</small> */}
 								</p>
 							) : null}
 						</div>
@@ -147,59 +147,59 @@ const showDate = (webmention: string) =>
 </style>
 
 <script>
-	if (document.querySelector('body')) {
-		function setContent(child: { [x: string]: any; content: { text: any } }) {
-			switch (child['wm-property']) {
-				case 'in-reply-to':
-					return child.content?.text
-				case 'like-of':
-					return 'liked this'
-				case 'repost-of':
-					return 'reposted this'
-				default:
-					return 'interacted with this post in an unknown way'
-			}
-		}
+	// if (document.querySelector('body')) {
+	// 	function setContent(child: { [x: string]: any; content: { text: any } }) {
+	// 		switch (child['wm-property']) {
+	// 			case 'in-reply-to':
+	// 				return child.content?.text
+	// 			case 'like-of':
+	// 				return 'liked this'
+	// 			case 'repost-of':
+	// 				return 'reposted this'
+	// 			default:
+	// 				return 'interacted with this post in an unknown way'
+	// 		}
+	// 	}
 
-		async function fetchInteractions(headerTitle: string | null) {
-			const response = await fetch('https://webmention.io/api/mentions.jf2?target=' + document.URL) //document.URL)
+	// async function fetchInteractions(headerTitle: string | null) {
+	// 	const response = await fetch('https://webmention.io/api/mentions.jf2?target=' + document.URL) //document.URL)
 
-			const data = await response.json()
-			if (data && data.children.length > 0) {
-				const interactions = document.createElement('div')
-				interactions.innerHTML = `<h3>${headerTitle ?? 'Interactions'}</h3>`
+	// 	const data = await response.json()
+	// 	if (data && data.children.length > 0) {
+	// 		const interactions = document.createElement('div')
+	// 		interactions.innerHTML = `<h3>${headerTitle ?? 'Interactions'}</h3>`
 
-				for (const child of data.children) {
-					const interaction = document.createElement('div')
+	// 		for (const child of data.children) {
+	// 			const interaction = document.createElement('div')
 
-					interaction.innerHTML = `
-              <p>
-                  <strong>
-                    <a href="${child.author.url || 'https://jswhisperer.uk/author/greg'}" itemprop="url" target="_blank">
-                      <img class='avatar' width="50" height="50" src="${child.author.photo}" title="${child.author.name}" />
-                      </a></strong>
-                      <span itemprop="name">${child.author.name || 'greg'}</span>
-                  <small> - <time aria-hidden='true' datetime={webmention['wm-received']}>${new Date(
-										child['wm-received']
-									).toLocaleString('en-US', {
-										month: 'short',
-										day: 'numeric',
-										year: 'numeric'
-									})}</time></small>
-              </p>
-              <blockquote>${setContent(child)}</blockquote>
-          `
+	// 			interaction.innerHTML = `
+	//           <p>
+	//               <strong>
+	//                 <a href="${child.author.url || 'https://jswhisperer.uk/author/greg'}" itemprop="url" target="_blank">
+	//                   <img class='avatar' width="50" height="50" src="${child.author.photo}" title="${child.author.name}" />
+	//                   </a></strong>
+	//                   <span itemprop="name">${child.author.name || 'greg'}</span>
+	//               <small> - <time aria-hidden='true' datetime={webmention['wm-received']}>${new Date(
+	// 								child['wm-received']
+	// 							).toLocaleString('en-US', {
+	// 								month: 'short',
+	// 								day: 'numeric',
+	// 								year: 'numeric'
+	// 							})}</time></small>
+	//           </p>
+	//           <blockquote>${setContent(child)}</blockquote>
+	//       `
 
-					interactions.appendChild(interaction)
-				}
+	// 			interactions.appendChild(interaction)
+	// 		}
 
-				const upvoteForm = document.getElementById('upvote-form')
-				if (upvoteForm && upvoteForm.parentNode) {
-					upvoteForm.parentNode.insertBefore(interactions, upvoteForm.nextSibling)
-				}
-			}
-		}
+	// 		const upvoteForm = document.getElementById('upvote-form')
+	// 		if (upvoteForm && upvoteForm.parentNode) {
+	// 			upvoteForm.parentNode.insertBefore(interactions, upvoteForm.nextSibling)
+	// 		}
+	// 	}
+	// }
 
-		//	await fetchInteractions('Webmentions')
-	}
+	//	await fetchInteractions('Webmentions')
+	//}
 </script>
