--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -231,7 +231,10 @@
 		position: relative;
 	}
 	h1.title {
-		font-size: 80px;
+		@media screen and (min-width: 768px) {
+			font-size: 80px;
+		}
+
 		margin: 0;
 		text-shadow: 1px 1px 5px #fff;
 		border-top: 1px solid rgba(0, 0, 0, 0.15);
