--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -34,7 +34,7 @@ const {
 				)
 			}
 
-			<div class='z-30 absolute bottom-0 w-full sixy-five-percent'>
+			<div class='z-30 absolute bottom-0 w-full sixty-five-percent'>
 				<div class='-z-10 absolute bottom-0 glass w-full'>
 					<div class='flex items-center justify-between gap-x-1 text-white px-6 py-4'>
 						<div class='flex flex-col gap-1 items-center justify-center'>
