--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,7 +40,7 @@ const structuredData = {
 		<main
 			itemscope
 			itemtype='http://schema.org/ItemList'
-			class='px-5 sm:mx-auto sm:max-w-2xl sm:px-8 lg:px-0 antialiased md:max-w-6xl grid gap-12 overflow-hidden md:overflow-visible'
+			class='px-5 mx-auto sm:max-w-2xl sm:px-8 lg:px-0 antialiased md:max-w-6xl grid gap-12 overflow-hidden md:overflow-visible main'
 		>
 			<slot />
 		</main>
