--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -82,10 +82,10 @@ const articleDate = pubDate.toISOString()
 				<a class='u-url u-uid' href={pageUrl} style='display:none;'></a>
 
 				<div class='flex flex-col gap-2'>
-					<div class='flex items-center justify-center gap-x-1'>
+					<div class='lg:flex items-center justify-center gap-x-1'>
 						<h1
 							itemprop='headline'
-							class='p-name text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'
+							class='p-name text-center text-xl md:text-6xl md:pb-2.5 font-semibold'
 						>
 							{title}
 						</h1>
