--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -675,7 +675,7 @@
 			padding: 15px 0;
 		}
 	} /*! CSS Used fontfaces */
-	@font-face {
+	/* @font-face {
 		font-family: gregasaurus;
 		src: url(/fonts/gregasaurus.eot);
 		src:
@@ -686,12 +686,12 @@
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
-	}
+	} */
 
 	.gregasaurus {
 		font-family: gregasaurus !important;
 	}
-	@font-face {
+	/* @font-face {
 		font-family: MuncieRegular;
 		src: url(/fonts/muncie-webfont.eot);
 		src:
@@ -702,7 +702,7 @@
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
-	}
+	} */
 	nav.ribbon > .inside {
 		height: 52px;
 	}
