--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,5 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout'
-import { Picture } from 'astro:assets'
 ---
 
 <BaseLayout title='Contact'>
@@ -227,7 +226,7 @@ import { Picture } from 'astro:assets'
 		}
 	}
 	/*! CSS Used fontfaces */
-	@font-face {
+	/* @font-face {
 		font-family: 'gregasaurus';
 		src: url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.eot');
 		src:
@@ -238,8 +237,8 @@ import { Picture } from 'astro:assets'
 			url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.ttf') format('truetype');
 		font-weight: normal;
 		font-style: normal;
-	}
-	@font-face {
+	} */
+	/* @font-face {
 		font-family: 'MuncieRegular';
 		src: url('https://gregbenner-classic-2009.netlify.app/fonts/muncie-webfont.eot');
 		src:
@@ -250,5 +249,5 @@ import { Picture } from 'astro:assets'
 			url('https://gregbenner-classic-2009.netlify.app/fonts/muncie-webfont.svg') format('svg');
 		font-weight: normal;
 		font-style: normal;
-	}
+	} */
 </style>
