--- a/public/styles/typography.css
+++ b/public/styles/typography.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
 	font-family: 'MuncieRegular';
 	src: url('/fonts/muncie-webfont.eot');
 	src:
@@ -8,7 +8,7 @@
 		url('/fonts/muncie-webfont.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
+} */
 body {
 	font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
 	font-size: 19px;
