--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -66,7 +66,7 @@ const showDate = (webmention: string) =>
 									{showDate(webmention['wm-received'])}
 								</time>
 							</small>
-							<div itemprop='name'>{webmention.author.name || 'greg'}</div>
+							<div itemprop='creator'>{webmention.author.name || 'greg'}</div>
 							<a
 								itemprop='url'
 								href={webmention.author.url || 'https://jswhisperer.uk/author/greg'}
